# robot

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENCE  README.md  package.xml  sonar-project.properties  velocity_qp.rosinstall  velocity_qp_dep.rosinstall  velocity_qp_dep_ssh.rosinstall  velocity_qp_plugin.xml
.kdev4/: velocity_qp.kdev4
cfg/: param.cfg
config/: velocity_qp.yaml
include/velocity_qp/controller/: controller.h
include/velocity_qp/robot/: panda_control.h
launch/: robot.rviz  run.launch
msg/: PandaRunMsg.msg
scripts/: killgazebo
src/controller/: chainjnttojacdotsolver.cpp  controller.cpp  load_trajectory.py
src/robot/: panda_control.cpp  panda_simulation.cpp
srv/: UI.srv
